# toronto-auto-theft-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
data/00_raw/: .gitignore  auto_theft.csv.dvc  census_2021.csv.dvc  census_2021_geo.csv.dvc  neighbourhoods_158.geojson.dvc  toronto_fsa.geojson.dvc
notebooks/: 01_eda_toronto_theft.ipynb  02_eda_census.ipynb  03_fsa_to_neighborhood.ipynb  04_joint_theft_census_analysis.ipynb
report/: references.bib  toronto_auto_theft_analysis.qmd
src/: __init__.py  run_all_etl_pipelines.py  run_census_etl_pipeline.py  run_etl_pipeline.py  run_geospatial_etl_pipeline.py
src/config/: __init__.py  etl_config.py  logging_config.py
src/etl/: __init__.py  auto_theft_pipeline.py  census_pipeline.py  geospatial_pipeline.py
src/etl/extractors/: __init__.py  auto_theft_extractor.py  census_extractor.py  geospatial_extractor.py
src/etl/loaders/: __init__.py  auto_theft_loader.py  census_loader.py  geospatial_loader.py
src/etl/transformers/: __init__.py  auto_theft_transformer.py  census_transformer.py  geospatial_transformer.py
src/utils/: __init__.py  error_handling.py  etl_metrics.py  validation.py
